=== HEAD

* Make Model#save use the same server it uses for saving as for retrieving the saved record (jeremyevans)

* Add Database#database_type method, for identifying which type of database the object is connecting to (jeremyevans)

* Add ability to reset primary key sequences in the PostgreSQL adapter (jeremyevans)

* Fix parsing of non-simple sequence names (that contain uppercase, spaces, etc.) in the PostgreSQL adapter (jeremyevans)

* Support dumping indexes in the schema_dumper extension (jeremyevans)

* Add index parsing to PostgreSQL, MySQL, SQLite, and JDBC adapters (jeremyevans)

* Correctly quote SQL Array references, and handle qualified identifiers with them (e.g. :table__column.sql_subscript(1)) (jeremyevans)

* Allow dropping an index with a name different than the default name (jeremyevans)

* Allow Dataset#from to remove existing FROM tables when called without an argument, instead of raising an error later (jeremyevans)

* Fix string quoting on Oracle so it doesn't double backslashes (jeremyevans)

* Alias the count function call in Dataset#count, fixes use on MSSQL (akitaonrails, jeremyevans)

* Allow QualifiedIdentifiers to be qualified, to allow :column.qualify(:table).qualify(:schema) (jeremyevans)

* Allow :db_type=>'mssql' option to be respected when using the DBI adapter (akitaonrails)

* Add schema_dumper extension, for dumping schema of tables (jeremyevans)

* Allow generic database types specified as ruby types to take options (jeremyevans)

* Change Dataset#exclude to invert given hash argument, not negate it (jeremyevans)

* Make Dataset#filter and related methods treat multiple arguments more intuitively (jeremyevans)

* Fix full text searching with multiple search terms on MySQL (jeremyevans)

* Fix altering a column name, type, default, or NULL/NOT NULL status on MySQL (jeremyevans)

* Fix index type syntax on MySQL (jeremyevans)

* Add temporary table support, via :temp option to Database#create_table (EppO, jeremyevans)
